; ModuleID = '/home/carl/AnghaBench/libsodium/src/libsodium/crypto_aead/chacha20poly1305/sodium/extr_aead_chacha20poly1305.c_crypto_aead_chacha20poly1305_ietf_encrypt_detached.c'
source_filename = "/home/carl/AnghaBench/libsodium/src/libsodium/crypto_aead/chacha20poly1305/sodium/extr_aead_chacha20poly1305.c_crypto_aead_chacha20poly1305_ietf_encrypt_detached.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_pad0 = common dso_local global i8* null, align 8
@crypto_aead_chacha20poly1305_ietf_ABYTES = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @crypto_aead_chacha20poly1305_ietf_encrypt_detached(i8* %0, i8* %1, i64* %2, i8* %3, i64 %4, i8* %5, i64 %6, i8* %7, i8* %8, i8* %9) #0 {
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i64*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i64, align 8
  %16 = alloca i8*, align 8
  %17 = alloca i64, align 8
  %18 = alloca i8*, align 8
  %19 = alloca i8*, align 8
  %20 = alloca i8*, align 8
  %21 = alloca i8, align 1
  %22 = alloca [64 x i8], align 16
  %23 = alloca [8 x i8], align 1
  store i8* %0, i8** %11, align 8
  store i8* %1, i8** %12, align 8
  store i64* %2, i64** %13, align 8
  store i8* %3, i8** %14, align 8
  store i64 %4, i64* %15, align 8
  store i8* %5, i8** %16, align 8
  store i64 %6, i64* %17, align 8
  store i8* %7, i8** %18, align 8
  store i8* %8, i8** %19, align 8
  store i8* %9, i8** %20, align 8
  %24 = load i8*, i8** %18, align 8
  %25 = getelementptr inbounds [64 x i8], [64 x i8]* %22, i64 0, i64 0
  %26 = load i8*, i8** %19, align 8
  %27 = load i8*, i8** %20, align 8
  %28 = call i32 @crypto_stream_chacha20_ietf(i8* %25, i32 64, i8* %26, i8* %27)
  %29 = getelementptr inbounds [64 x i8], [64 x i8]* %22, i64 0, i64 0
  %30 = call i32 @crypto_onetimeauth_poly1305_init(i8* %21, i8* %29)
  %31 = getelementptr inbounds [64 x i8], [64 x i8]* %22, i64 0, i64 0
  %32 = call i32 @sodium_memzero(i8* %31, i32 64)
  %33 = load i8*, i8** %16, align 8
  %34 = load i64, i64* %17, align 8
  %35 = trunc i64 %34 to i32
  %36 = call i32 @crypto_onetimeauth_poly1305_update(i8* %21, i8* %33, i32 %35)
  %37 = load i8*, i8** @_pad0, align 8
  %38 = load i64, i64* %17, align 8
  %39 = sub i64 16, %38
  %40 = and i64 %39, 15
  %41 = trunc i64 %40 to i32
  %42 = call i32 @crypto_onetimeauth_poly1305_update(i8* %21, i8* %37, i32 %41)
  %43 = load i8*, i8** %11, align 8
  %44 = load i8*, i8** %14, align 8
  %45 = load i64, i64* %15, align 8
  %46 = load i8*, i8** %19, align 8
  %47 = load i8*, i8** %20, align 8
  %48 = call i32 @crypto_stream_chacha20_ietf_xor_ic(i8* %43, i8* %44, i64 %45, i8* %46, i32 1, i8* %47)
  %49 = load i8*, i8** %11, align 8
  %50 = load i64, i64* %15, align 8
  %51 = trunc i64 %50 to i32
  %52 = call i32 @crypto_onetimeauth_poly1305_update(i8* %21, i8* %49, i32 %51)
  %53 = load i8*, i8** @_pad0, align 8
  %54 = load i64, i64* %15, align 8
  %55 = sub i64 16, %54
  %56 = and i64 %55, 15
  %57 = trunc i64 %56 to i32
  %58 = call i32 @crypto_onetimeauth_poly1305_update(i8* %21, i8* %53, i32 %57)
  %59 = getelementptr inbounds [8 x i8], [8 x i8]* %23, i64 0, i64 0
  %60 = load i64, i64* %17, align 8
  %61 = trunc i64 %60 to i32
  %62 = call i32 @STORE64_LE(i8* %59, i32 %61)
  %63 = getelementptr inbounds [8 x i8], [8 x i8]* %23, i64 0, i64 0
  %64 = call i32 @crypto_onetimeauth_poly1305_update(i8* %21, i8* %63, i32 8)
  %65 = getelementptr inbounds [8 x i8], [8 x i8]* %23, i64 0, i64 0
  %66 = load i64, i64* %15, align 8
  %67 = trunc i64 %66 to i32
  %68 = call i32 @STORE64_LE(i8* %65, i32 %67)
  %69 = getelementptr inbounds [8 x i8], [8 x i8]* %23, i64 0, i64 0
  %70 = call i32 @crypto_onetimeauth_poly1305_update(i8* %21, i8* %69, i32 8)
  %71 = load i8*, i8** %12, align 8
  %72 = call i32 @crypto_onetimeauth_poly1305_final(i8* %21, i8* %71)
  %73 = call i32 @sodium_memzero(i8* %21, i32 1)
  %74 = load i64*, i64** %13, align 8
  %75 = icmp ne i64* %74, null
  br i1 %75, label %76, label %79

76:                                               ; preds = %10
  %77 = load i64, i64* @crypto_aead_chacha20poly1305_ietf_ABYTES, align 8
  %78 = load i64*, i64** %13, align 8
  store i64 %77, i64* %78, align 8
  br label %79

79:                                               ; preds = %76, %10
  ret i32 0
}

declare dso_local i32 @crypto_stream_chacha20_ietf(i8*, i32, i8*, i8*) #1

declare dso_local i32 @crypto_onetimeauth_poly1305_init(i8*, i8*) #1

declare dso_local i32 @sodium_memzero(i8*, i32) #1

declare dso_local i32 @crypto_onetimeauth_poly1305_update(i8*, i8*, i32) #1

declare dso_local i32 @crypto_stream_chacha20_ietf_xor_ic(i8*, i8*, i64, i8*, i32, i8*) #1

declare dso_local i32 @STORE64_LE(i8*, i32) #1

declare dso_local i32 @crypto_onetimeauth_poly1305_final(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
